--- a/.github/workflows/4-deploy-to-prod.yml
+++ b/.github/workflows/4-deploy-to-prod.yml
@@ -62,7 +62,7 @@ jobs:
 
             The latest release is always mirrored at [app.uniswap.org](https://app.uniswap.org).
 
-            You can also access the Uniswap Interface from an IPFS gateway.
+            You can also access the Ring Exchange Interface from an IPFS gateway.
             **BEWARE**: The Uniswap interface uses [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) to remember your settings, such as which tokens you have imported.
             **You should always use an IPFS gateway that enforces origin separation**, or our hosted deployment of the latest release at [app.uniswap.org](https://app.uniswap.org).
             Your Uniswap settings are never remembered across different URLs.
