--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uniswap/interface",
+  "name": "@few/interface",
   "version": "1.1.0",
-  "description": "Uniswap Interface",
+  "description": "Ring Exchange Interface",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "ajv": "node scripts/compile-ajv-validators.js",
