--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,23 +214,23 @@ jobs:
           name: Cloud typecheck
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST_REPORTER_WEBHOOK }}
 
-  cloud-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
-      - uses: actions/cache@v3
-        with:
-          path: node_modules/.cache
-          key: ${{ runner.os }}-cloud-jest-${{ github.run_id }}
-          restore-keys: ${{ runner.os }}-cloud-jest-
-      # Only use 1 worker, so the other can be used for the proxy server under test.
-      - run: yarn test:cloud --coverage --maxWorkers=1
-      - uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: false
-          flags: cloud-tests
+  # cloud-tests:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/setup
+  #     - uses: actions/cache@v3
+  #       with:
+  #         path: node_modules/.cache
+  #         key: ${{ runner.os }}-cloud-jest-${{ github.run_id }}
+  #         restore-keys: ${{ runner.os }}-cloud-jest-
+  #     # Only use 1 worker, so the other can be used for the proxy server under test.
+  #     - run: yarn test:cloud --coverage --maxWorkers=1
+  #     - uses: codecov/codecov-action@v3
+  #       with:
+  #         token: ${{ secrets.CODECOV_TOKEN }}
+  #         fail_ci_if_error: false
+  #         flags: cloud-tests
         
   pre:
     if: ${{ github.ref_name == 'main' || github.ref_name == 'releases/staging' }}
